--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -14,12 +13,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="440.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jovisco.um.imagescalerui.controllers.MainController">
+<StackPane fx:id="stackPane" prefHeight="440.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jovisco.um.imagescalerui.controllers.MainController">
    <children>
-      <StackPane prefHeight="150.0" prefWidth="200.0">
-         <children>
+      <VBox fx:id="root" alignment="TOP_CENTER">
+      <children>
             <BorderPane prefHeight="200.0" prefWidth="200.0">
                <center>
                   <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -151,9 +149,9 @@
                </top>
             </BorderPane>
          </children>
-      </StackPane>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
-</VBox>
+</StackPane>
